--- a/front/package.json
+++ b/front/package.json
@@ -2,7 +2,7 @@
   "name": "on-932-reservations-frontend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "App.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:dev": "webpack-dev-server",
@@ -10,14 +10,15 @@
   },
   "browserslist": "> 0.5%",
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "core-js": "^3.2.1",
-    "regenerator-runtime": "^0.13.3",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1"
+    "@babel/core": "^7.17.8",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.4",
+    "clean-webpack-plugin": "^4.0.0",
+    "core-js": "^3.21.1",
+    "regenerator-runtime": "^0.13.9",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4",
+    "ts-loader": "^9.2.8"
   }
 }
